Add post todos and integrations tests